updated starting point

--- a/src/app/student-details/student-details.component.html
+++ b/src/app/student-details/student-details.component.html
@@ -3,17 +3,17 @@
 
   <div class="detail-group">
     <div>Student ID:</div>
-    <div>{{student.id}}</div>
+    <div id="studentId">{{student.id}}</div>
   </div>
 
   <div class="detail-group">
     <div>Parent Phone Number:</div>
-    <div>{{student.parentPhoneNumber}}</div>
+    <div id="parentPhoneNumber">{{student.parentPhoneNumber}}</div>
   </div>
 
   <div class="detail-group">
     <div>Prior Violations:</div>
-    <div>{{student.priorViolations}}</div>
+    <div id="priorViolations">{{student.priorViolations}}</div>
   </div>
 
   <button *ngIf="student.priorViolations > 3" (click)="expel()">EXPEL</button>
