--- a/src/app/student-discipline-component/student-discipline.component.html
+++ b/src/app/student-discipline-component/student-discipline.component.html
@@ -20,7 +20,7 @@
   </div>
 
   <div>
-    <button type="submit">Submit</button>
+    <button [disabled]="form.invalid" type="submit">Submit</button>
   </div>
 </form>
 
