--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <div class="app-container">
-  <app-detention-report-component></app-detention-report-component>
+  <app-student-discipline></app-student-discipline>
 </div>
