end of session 1

--- a/src/app/student-discipline-component/student-discipline.component.html
+++ b/src/app/student-discipline-component/student-discipline.component.html
@@ -1,3 +1,7 @@
 <form>
+    <label for="student">Student</label>
+    <select id="student">
+        <option *ngFor="let student of students">{{student.firstName + ' ' + student.lastName}}</option>
+    </select>
 </form>
 
